Commit after issues

--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
 	</header>
 	<div class="welcome__container">
 		<div class="welcome__logo">
-			<a href="#"><img class="logo__img" src="img/logo.png" alt="logo"></a>
-			<a href="#"><span class="logo__tm color__white txt__up font__bold">tm</span></a>
+			<a href="#"><img class="logo__img" src="img/logo.png" alt="logo"><span class="logo__tm color__white txt__up font__bold">tm</span></a>
 		</div>
 		<h1 class="logo__text color__white txt__up"><span class="font__bold">jwood</span>photography</h1>
 		<div class="welcome__scroll scroll">
-			<a href="#about-me"><p class="scroll__text color__white txt__up font__bold">scroll down to see more</p></a>
-			<a href="#about-me"><img src="img/scroll.png" alt="scroll"></a>
+			<a href="#about-me"><p class="scroll__text color__white txt__up font__bold">scroll down to see more</p><img src="img/scroll.png" alt="scroll"></a>
 		</div>
 	</div>	
 	<article id="about-me">
@@ -42,8 +40,7 @@
 			</div>
 		</div>
 		<div class="first-section__scroll scroll">
-			<a href="#portfolio"><p class="scroll__text color__grey txt__up font__bold">keep scrolling, there is still more to come.</p></a>
-			<a href="#portfolio"><img src="img/scroll.png" alt="scroll" class="color__grey"></a>
+			<a href="#portfolio"><p class="scroll__text color__grey txt__up font__bold">keep scrolling, there is still more to come.</p><img src="img/scroll.png" alt="scroll" class="color__grey"></a>
 		</div>
 	</article>
 	<article id="portfolio">
@@ -62,16 +59,15 @@
 				<li class="gallery__link"><img class="gallery__img" src="img/img10.png" alt="img10"></li>
 			</ul>
 			<div class="second-section__scroll scroll">
-				<a href="#contact"><p class="scroll__text color__white txt__up font__bold">do you want to see it with your own eyes? Scroll!</p></a>
-				<a href="#contact"><img src="img/scroll.png" alt="scroll"></a>
+				<a href="#contact"><p class="scroll__text color__white txt__up font__bold">do you want to see it with your own eyes? Scroll!</p><img src="img/scroll.png" alt="scroll"></a>
 			</div>
 		</div>
 	</article>
-	<footer id="contact">
+	<footer class="footer" id="contact">
 		<div class="footer__container">
 			<div class="footer__mail">
 				<p class="mail__title txt__up font__bold">mail:</p>
-				<p class="mail__desc txt__up"><a href="Jason@wood.com" class="color__black">Jason@wood.com</a></p>
+				<p class="mail__desc txt__up"><a href="mailto:Jason@wood.com" class="color__black">Jason@wood.com</a></p>
 			</div>
 			<div class="footer__phone">
 				<p class="phone__title txt__up font__bold">phone:</p>
