fix header height bag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<header>
+	<header class="header">
 		<nav class="nav__container">
 			<ul class="nav">
 				<li class="nav__link"><a href="#" class="color__white txt__up">Home</a></li>
@@ -17,16 +17,16 @@
 				<li class="nav__link"><a href="#contact" class="color__white txt__up">Contact</a></li>
 			</ul>
 		</nav>
+		<div class="welcome__container">
+			<div class="welcome__logo">
+				<a href="#"><img class="logo__img" src="img/logo.png" alt="logo"><span class="logo__tm color__white txt__up font__bold">tm</span></a>
+			</div>
+			<h1 class="logo__text color__white txt__up"><span class="font__bold">jwood</span>photography</h1>
+			<div class="welcome__scroll scroll">
+				<a href="#about-me"><p class="scroll__text color__white txt__up font__bold">scroll down to see more</p><img src="img/scroll.png" alt="scroll"></a>
+			</div>	
+		</div>
 	</header>
-	<div class="welcome__container">
-		<div class="welcome__logo">
-			<a href="#"><img class="logo__img" src="img/logo.png" alt="logo"><span class="logo__tm color__white txt__up font__bold">tm</span></a>
-		</div>
-		<h1 class="logo__text color__white txt__up"><span class="font__bold">jwood</span>photography</h1>
-		<div class="welcome__scroll scroll">
-			<a href="#about-me"><p class="scroll__text color__white txt__up font__bold">scroll down to see more</p><img src="img/scroll.png" alt="scroll"></a>
-		</div>
-	</div>	
 	<article id="about-me">
 		<div class="first-section__container">
 			<div class="first-section__img">
